@@ -123,7 +123,7 @@ wheel:capsule false #sphere-capped cylinder
 
 #values for calculating air (and water) drag/friction:
 body:linear_drag 3 1 5 #X (sideways), Y (forward/backward) and Z (up/down)
-body:angular_drag 10
+body:angular_drag 50 50 10 #rotation along said axes
 wheel:linear_drag 0
 wheel:angular_drag 0.5
 
